cmake_minimum_required(VERSION 3.16)
project(LeetCode_150_C__)

set(CMAKE_CXX_STANDARD 17)

add_executable(LeetCode_150_C__ InterleavingString.cpp
        main.cpp
        main.cpp
        ValidateBinarySearchTree.cpp
        ValidateBinarySearchTree.cpp
        RecoverBinarySearchTree.cpp
        LongestSubstringWithoutRepeatingCharacters.cpp
        LongestPalindromicSubstring.cpp
        IntegerToRoman.cpp
        3Sum.cpp
        RemoveNNodeList.cpp
        SearchRotatedSortedArray.cpp
        CombinationSum.cpp
        FirstIndexOfOccurence.cpp
        JumpGameII.cpp
        MaximumSubarray.cpp
        ReveresedLinkList.cpp)
